--- a/Rewrite/TikTok.conf
+++ b/Rewrite/TikTok.conf
@@ -2,6 +2,6 @@ hostname=*.tiktokv.com, *.byteoversea.com, api*.musical.ly, api*.amemv.com, awem
 
 #这个是 Appstore 美区下载的 Tiktok 版本
 # Tiktok
-(?<=(carrier|account|sys)_region=)CN url 307 JP
+(?<=(carrier|account|sys)_region=)CN url 307 KR
 (?<=&app_version=)1(6|7)..(?=.?.?&) url 307 1
 (?<=\?version_code=)1(6|7)..(?=.?.?&) url 307 1
