--- a/QuantumultX_Remote.conf
+++ b/QuantumultX_Remote.conf
@@ -1,8 +1,12 @@
-/*
-* 微信公众号：墨鱼手记
-* Crated by 墨鱼
-* QX crack 脚本
-*/
+// ==UserScript==
+// @name              QX Crack 脚本
+// @author            墨鱼
+// @WechatID          墨鱼手记
+// @updateTime        20200819
+// @scriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/QuantumultX_Remote.conf
+// ==/UserScript==
+
+
 hostname = api.gotokeep.com,
 
 # > 最新版keep(20200819)
