--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -7,7 +7,11 @@
 // ==/UserScript==
 
 
-hostname = api.gotokeep.com,
+hostname = api.gotokeep.com, *.ddly666.top, 
+
+
+# > 小程序解除隐藏内容
+https://aaa.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
 # > 最新版keep(20200819)
 ^https:\/\/api\.gotokeep\.com\/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/keep.js
