--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -11,7 +11,11 @@ hostname = api.gotokeep.com, *.ddly666.top, *.hkj178.com, a.jxjt888.top, lysl202
 
 
 # > 小程序解除隐藏内容（适用的小程序有：
-^https:\/\/(aaa.ddly666.top|*.hkj178.com|a.jxjt888.top|lysl2020.com|www.i3zh.com)/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+^https:\/\/aaa.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+^https:\/\/*.hkj178.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+^https:\/\/a.jxjt888.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+^https:\/\/lysl2020.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+^https:\/\/www.i3zh.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
 # > 最新版keep(20200819)
 ^https:\/\/api\.gotokeep\.com\/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/keep.js
