--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -10,11 +10,16 @@
 hostname = api.gotokeep.com, *.ddly666.top, *.hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
 
 
-# > 小程序解除隐藏内容（适用的小程序有：
+# > 小程序解除隐藏内容
+# > 大大花苑
 ^https:\/\/aaa.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+# > 黑科技软件
 ^https:\/\/*.hkj178.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+# > 野泽后花园
 ^https:\/\/a.jxjt888.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+# > 小野分享
 ^https:\/\/lysl2020.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+# > 搜罗好货
 ^https:\/\/www.i3zh.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
 # > 最新版keep(20200819)
