--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -7,14 +7,14 @@
 // ==/UserScript==
 
 
-hostname = api.gotokeep.com, *.ddly666.top, *.hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
+hostname = api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
 
 
 # > 小程序解除隐藏内容20200827
 # > 大大花苑
 ^https:\/\/aaa.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 # > 黑科技软件
-^https:\/\/*.hkj178.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+^https:\/\/hkj178.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 # > 天泽后花园
 ^https:\/\/a.jxjt888.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 # > 小野分享
