--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -7,10 +7,12 @@
 // ==/UserScript==
 
 
-hostname = api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
+hostname = buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
 
+# > RCam 解锁会员功能（20200830）
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/rcam.js
 
-# > 小程序解除隐藏内容20200828
+# > 小程序解除隐藏内容（20200828）
 # > 大大花苑
 ^https:\/\/aaa.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 # > 黑科技软件
@@ -22,5 +24,5 @@ hostname = api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.
 # > 搜罗好货
 ^https:\/\/www.i3zh.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
-# > 最新版keep(20200819)
+# > 最新版keep（20200819）
 ^https:\/\/api\.gotokeep\.com\/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/keep.js
