--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -1,6 +1,7 @@
 // ==UserScript==
 // @name              QX Crack 脚本
-// @author            墨鱼
+// @author            Cuttlefish
+// @Tg group          t.me/ddgksf2013
 // @WechatID          墨鱼手记
 // @updateTime        20200828
 // @scriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Quan_crack.conf
