--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -2,8 +2,8 @@
 // @name              QX Crack 脚本
 // @author            Cuttlefish
 // @Tg group          t.me/ddgksf2013
-// @WechatID          墨鱼手记
-// @updateTime        20200828
+// @WechatID          公众号墨鱼手记
+// @updateTime        20200831
 // @scriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Quan_crack.conf
 // ==/UserScript==
 
