--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -1,14 +1,22 @@
 // ==UserScript==
-// @name              QX Crack 脚本
-// @author            Cuttlefish
+// @Name              QX Crack 脚本
+// @Author            Cuttlefish
 // @Tg group          t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
-// @updateTime        20200831
-// @scriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Quan_crack.conf
+// @UpdateTime        20200831
+// @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Quan_crack.conf
 // ==/UserScript==
 
 
-hostname = buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
+hostname = diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
+
+
+
+# > moo日记
+https://diary.7english.cn:2433//api/user/userInfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/moo.js
+
+# > Geist Gear Picsew 三者解锁会员功能（20200831）
+# > 内容与rcam一致，此处不用再写
 
 # > RCam 解锁会员功能（20200830）
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/receipt.js
