--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -4,6 +4,7 @@
 // @Tg group          t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20200831
+// @ScriptTime        用于脚本失效时抓取对应时间的旧版本应用
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Quan_crack.conf
 // ==/UserScript==
 
@@ -12,7 +13,7 @@ hostname = diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.
 
 
 
-# > moo日记
+# > moo日记 (20200831)
 https://diary.7english.cn:2433//api/user/userInfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/moo.js
 
 # > Geist Gear Picsew 三者解锁会员功能（20200831）
