--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -4,7 +4,7 @@
 // @Tg group          t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20200831
-// @ScriptTime        用于脚本失效时抓取对应时间的旧版本应用
+// @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Quan_crack.conf
 // ==/UserScript==
 
