--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -25,7 +25,7 @@ https://diary.7english.cn:2433//api/user/userInfo url script-response-body https
 
 # > 小程序解除隐藏内容（20200828）
 # > 大大花苑
-^https:\/\/aaa.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+^https:\/\/*.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 # > 黑科技软件
 ^https:\/\/hkj178.com/wp-json/mp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 # > 天泽后花园
