--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -23,8 +23,8 @@ https://diary.7english.cn:2433//api/user/userInfo url script-response-body https
 # > RCam 解锁会员功能（20200830）
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/receipt.js
 
-# > 小程序解除隐藏内容（20200828）
-# > 大大花苑
+# > 小程序解除隐藏内容（20200901）
+# > 酸鸡汤（光头）
 https://bbb.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 # > 黑科技软件
 ^https:\/\/hkj178.com/wp-json/mp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
