--- a/Rewrite/Advertising.conf
+++ b/Rewrite/Advertising.conf
@@ -227,8 +227,8 @@ hostname = api.21jingji.com,service.4gtv.tv,app.58.com,pic?.ajkimg.com,gw.alicdn
 
 # J
 # > JD - api.m.jd.com,ms.jr.jd.com,img*.360buyimg.com
-^(http|https):\/\/api\.m\.jd.com\/client\.action\?functionId=start url reject-200
-^(http|https):\/\/api\.m\.jd.com\/client\.action\?functionId=queryMaterialAdverts url reject-200
+;^(http|https):\/\/api\.m\.jd.com\/client\.action\?functionId=start url reject-200
+;^(http|https):\/\/api\.m\.jd.com\/client\.action\?functionId=queryMaterialAdverts url reject-200
 ^(http|https):\/\/(bdsp-x|dsp-x)\.jd\.com\/adx\/ url reject-200
 ^(http|https):\/\/ms\.jr\.jd\.com\/gw\/generic\/aladdin\/na\/m\/getLoadingPicture url reject-200
 ^(http|https):\/\/img\d+\.360buyimg\.com\/jddjadvertise\/ url reject-200
