--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -3,18 +3,24 @@
 // @Author            Cuttlefish
 // @Tg group          t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        20200831
+// @UpdateTime        20200902
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Quan_crack.conf
 // ==/UserScript==
 
 
-hostname = mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
+hostname = subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
+
+
+
+# > lensa 人像修图解锁（20200902）
+^https?:\/\/subscription-service\.neuralprisma\.com\/subscription_get url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/lensa.js
+
 
 # > 财新解锁付费文章（20200901）
 https://mappsv5.caixin.com/articlev5/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/caixin.js
 
-# > moo日记 (20200831)
+# > moo日记永久会员 (20200831)
 https://diary.7english.cn:2433//api/user/userInfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/moo.js
 
 # > Geist Gear Picsew 三者解锁会员功能（20200831）
