--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -11,7 +11,8 @@
 
 hostname = subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
 
-
+# > 剪影解锁订阅（20200902）
+# > 重写内容与rcam一致，此处不用再写
 
 # > lensa 人像修图解锁（20200902）
 ^https?:\/\/subscription-service\.neuralprisma\.com\/subscription_get url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/lensa.js
