--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -9,7 +9,11 @@
 // ==/UserScript==
 
 
-hostname = subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
+hostname = claritywallpaper.com, subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
+
+
+# > 克拉壁纸解锁付费壁纸（20200903）仅适用旧版 V4.7.3 ID:833188498
+^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/clarity.js
 
 # > 剪影解锁订阅（20200902）
 # > 重写内容与rcam一致，此处不用再写
@@ -23,7 +27,7 @@ https://mappsv5.caixin.com/articlev5/* url script-response-body https://raw.gith
 # > moo日记永久会员 (20200831)
 https://diary.7english.cn:2433//api/user/userInfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/moo.js
 
-# > Geist Gear Picsew 三者解锁会员功能（20200831）
+# > Geist  Picsew 二者解锁会员功能（20200831）
 # > 内容与rcam一致，此处不用再写
 
 # > RCam 解锁会员功能（20200830）
