--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -12,6 +12,9 @@
 hostname = claritywallpaper.com, subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
 
 
+# > 滴答清单解锁会员功能（20200903）仅适用旧版 V5.2.51 ID:832943581
+^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ddqd.js
+
 # > 克拉壁纸解锁付费壁纸（20200903）仅适用旧版 V4.7.3 ID:833188498
 ^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/clarity.js
 
