--- a/History_price.conf
+++ b/History_price.conf
@@ -1,3 +1,12 @@
+// ==UserScript==
+// @Name              QX Crack 脚本
+// @Author            yichahucha
+// @Tg group          t.me/ddgksf2013
+// @WechatID          公众号墨鱼手记
+// @UpdateTime        20200904
+// @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/History_price.conf
+// ==/UserScript==
+
 hostname = trade-acs.m.taobao.com, api.m.jd.com
 
 # > 京东商品历史价格显示（20200904）
