--- a/History_price.conf
+++ b/History_price.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @Name              QX Crack 脚本
+// @Name              QX Function 脚本
 // @Author            yichahucha
 // @Tg group          t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
