--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -51,16 +51,16 @@ https://diary.7english.cn:2433//api/user/userInfo url script-response-body https
 # > 酸鸡汤（光头）
 https://bbb.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
-# > 黑科技软件
+# > 黑科技软件（20200901）
 ^https:\/\/hkj178.com/wp-json/mp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
-# > 天泽后花园
+# > 天泽后花园（20200901）
 ^https:\/\/a.jxjt888.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
-# > 小野分享
+# > 小野分享（20200901）
 ^https:\/\/lysl2020.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
-# > 搜罗好货
+# > 搜罗好货（20200901）
 ^https:\/\/www.i3zh.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
 # > 最新版keep（20200819）
