--- a/History_price.conf
+++ b/History_price.conf
@@ -1,6 +1,6 @@
 // ==UserScript==
 // @Name              QX Function 脚本
-// @Author            yichahucha
+// @Author            yichahucha(https://github.com/yichahucha/surge)
 // @Tg group          t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20200904
