--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @Name              QX Crack 脚本
 // @Author            Cuttlefish
-// @Tg group          t.me/ddgksf2013
+// @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20200902
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
