--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -13,7 +13,7 @@ hostname = subs.platforms.team, sports.lifesense.com, api.pushover.net, subs.pla
 
 
 # > 实时天气 解锁VIP功能（20200909）-----失效已加密
-^https:\/\/subs\.platforms\.team\/apple\/verifyTransaction$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/sstq.js
+;^https:\/\/subs\.platforms\.team\/apple\/verifyTransaction$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/sstq.js
 
 # > 乐心健康步数修改 （20200908）
 ^https:\/\/sports\.lifesense\.com\/sport_service\/sport\/sport\/uploadMobileStepV2 url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/lxhealth.js
