--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -17,7 +17,7 @@ https://www.mindmeister.com/api/v2/licenses/meistertask url script-response-body
 # > 实时天气 解锁VIP功能（20200909）-----失效已加密
 ;^https:\/\/subs\.platforms\.team\/apple\/verifyTransaction$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/sstq.js
 
-# > 乐心健康步数修改 （20200908）
+# > 乐心健康步数修改 （20200908）Attention：APP里面数据共享，打开微信和支付宝，需要修改步数的时候，打开乐心健康
 ^https:\/\/sports\.lifesense\.com\/sport_service\/sport\/sport\/uploadMobileStepV2 url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/lxhealth.js
 
 # > pushover 解锁会员（20200905）
