--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -54,7 +54,7 @@ https?:\/\/api\.jiaonizuocai\.com url script-response-body https://raw.githubuse
 ^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/clarity.js
 
 # > 剪影解锁订阅（20200902）
-# > 重写内容与rcam一致，此处不用再写
+;The content is consistent with rcam, no longer repeated.    
 
 # > lensa 人像修图解锁（20200902）
 ^https?:\/\/subscription-service\.neuralprisma\.com\/subscription_get url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/lensa.js
@@ -66,7 +66,7 @@ https://mappsv5.caixin.com/articlev5/* url script-response-body https://raw.gith
 https://diary.7english.cn:2433//api/user/userInfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/moo.js
 
 # > Geist  Picsew 二者解锁会员功能（20200831）
-# > 内容与rcam一致，此处不用再写
+;The content is consistent with rcam, no longer repeated.
 
 # > RCam 解锁会员功能（20200830）
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/receipt.js
