--- a/Quan_crack.conf
+++ b/Quan_crack.conf
@@ -3,22 +3,25 @@
 // @Author            Cuttlefish
 // @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        20200913
+// @UpdateTime        20200915
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Quan_crack.conf
 // ==/UserScript==
 
 
-hostname = mb3admin.com, api.591master.com, www.mindmeister.com, subs.platforms.team, sports.lifesense.com, api.pushover.net, subs.platforms.team, api.hulusaas.com, snailsleep.net,music.snailsleep.net,community.snailsleep.net, api.jiaonizuocai.com, nmeditation.snailsleep.net, api.m.jd.com, claritywallpaper.com, subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
+hostname = dbapi.ganbuguo.com, mb3admin.com, api.591master.com, www.mindmeister.com, subs.platforms.team, sports.lifesense.com, api.pushover.net, subs.platforms.team, api.hulusaas.com, snailsleep.net,music.snailsleep.net,community.snailsleep.net, api.jiaonizuocai.com, nmeditation.snailsleep.net, api.m.jd.com, claritywallpaper.com, subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
 
 
-# > emby流媒体解锁订阅（20200913）Attention: 配合普拉斯影业提供的账号可进行观影：域名: https://movie.xeton.dev 端口: 443 账号：普拉斯影业 密码：plusisbest
+# done 解锁会员功能 PRO （20200914）Attention：登录使用
+http://dbapi.ganbuguo.com/user/userinfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/done.js
+
+# > emby 流媒体解锁订阅（20200913）Attention: 配合普拉斯影业提供的账号可进行观影：域名: https://movie.xeton.dev 端口: 443 账号：普拉斯影业 密码：plusisbest
 ^https:\/\/mb3admin\.com\/admin\/service(\/registration\/validateDevice|\/appstore\/register|\/registration\/validate|\/registration\/getStatus|\/supporter\/retrievekey) url script-echo-response https://subweb.oss-cn-hongkong.aliyuncs.com/Script/embycrack.js
 
 # > VCUS Unlock VIP (20200912)
 ;The content is consistent with rcam, no longer repeated.
 
-# > 手机硬件管家高级VIP (20200912)
+# > 手机硬件管家 高级VIP (20200912)
 http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\/(downloadwallpaper|getuser) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/phoneyjgj.js
 
 # > MeisterTask Premium(20200910)
@@ -27,7 +30,7 @@ https://www.mindmeister.com/api/v2/licenses/meistertask url script-response-body
 # > 实时天气 解锁VIP功能（20200909）-----失效已加密
 ;^https:\/\/subs\.platforms\.team\/apple\/verifyTransaction$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/sstq.js
 
-# > 乐心健康步数修改 （20200908）Attention：APP里面数据共享，打开微信和支付宝，需要修改步数的时候，打开乐心健康
+# > 乐心健康 步数修改 （20200908）Attention：APP里面数据共享，打开微信和支付宝，需要修改步数的时候，打开乐心健康
 ^https:\/\/sports\.lifesense\.com\/sport_service\/sport\/sport\/uploadMobileStepV2 url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/lxhealth.js
 
 # > pushover 解锁会员（20200905）
@@ -51,22 +54,22 @@ https?:\/\/api\.jiaonizuocai\.com url script-response-body https://raw.githubuse
 # > 京东APP商品显示历史价格（20200904）
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/jd_price.js
 
-# > 滴答清单解锁会员功能（20200903）仅适用旧版 V5.2.51 ID:832943581
+# > 滴答清单 解锁会员功能（20200903）仅适用旧版 V5.2.51 ID:832943581
 ^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ddqd.js
 
-# > 克拉壁纸解锁付费壁纸（20200903）仅适用旧版 V4.7.3 ID:833188498
+# > 克拉壁纸 解锁付费壁纸（20200903）仅适用旧版 V4.7.3 ID:833188498
 ^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/clarity.js
 
-# > 剪影解锁订阅（20200902）
+# > 剪影 解锁订阅（20200902）
 ;The content is consistent with rcam, no longer repeated.    
 
 # > lensa 人像修图解锁（20200902）
 ^https?:\/\/subscription-service\.neuralprisma\.com\/subscription_get url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/lensa.js
 
-# > 财新解锁付费文章（20200901）
+# > 财新 解锁付费文章（20200901）
 https://mappsv5.caixin.com/articlev5/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/caixin.js
 
-# > moo日记永久会员 (20200831)
+# > moo 日记永久会员 (20200831)
 https://diary.7english.cn:2433//api/user/userInfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/moo.js
 
 # > Geist  Picsew 二者解锁会员功能（20200831）
