--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -13,10 +13,10 @@ hostname = 115.28.168.103, dbapi.ganbuguo.com, mb3admin.com, api.591master.com, 
 
 
 
-# 一言 解锁终身会员 （20200916）
+# > 一言 解锁终身会员 （20200916）Attention:登录使用
 http://115.28.168.103:8080/yiyan/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/yiyan.js
 
-# done 解锁会员功能 PRO （20200914）Attention：登录使用
+# > done 解锁会员功能 PRO （20200914）Attention：登录使用
 http://dbapi.ganbuguo.com/user/userinfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/done.js
 
 # > emby 流媒体解锁订阅（20200913）Attention: 配合普拉斯影业提供的账号可进行观影：域名: https://movie.xeton.dev 端口: 443 账号：普拉斯影业 密码：plusisbest
