--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -82,9 +82,9 @@ https://diary.7english.cn:2433//api/user/userInfo url script-response-body https
 # > RCam 解锁会员功能（20200830）
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/receipt.js
 
-# > 小程序解除隐藏内容（20200901）
-# > 酸鸡汤（光头）
-https://bbb.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+# > 小程序解除隐藏内容
+# > 酸鸡汤,老爷花苑（光头的小程序，两个通用）（20200916）
+https://[a-z]+.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
 # > 黑科技软件（20200901）
 ^https:\/\/hkj178.com/wp-json/mp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
