--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -13,7 +13,7 @@ hostname = d.syshhc.top, 115.28.168.103, dbapi.ganbuguo.com, mb3admin.com, api.5
 
 
 
-# > 老胡工具箱 微信小程序 （20200916）
+# > 老胡工具箱 微信小程序解除隐藏内容 （20200916）
 https://d.syshhc.top/wp-json/wp/v2/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
 # > 一言 解锁终身会员 （20200916）Attention:登录使用
