--- a/Conf/Profile.conf
+++ b/Conf/Profile.conf
@@ -1,3 +1,4 @@
+# test
 [general]
 server_check_url= http://www.qualcomm.cn/generate_204
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
