--- a/Conf/Profile.conf
+++ b/Conf/Profile.conf
@@ -1,6 +1,7 @@
-# test
+# Profile
 [general]
 server_check_url= http://www.qualcomm.cn/generate_204
+profile_img_url=https://github.githubassets.com/images/modules/site/integrators/google.png
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
 resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 
@@ -8,4 +9,59 @@ resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/maste
 server=119.29.29.29
 server=223.5.5.5
 server=114.114.114.114
+
+[task_local]
+# > 京东32合一
+1,7 0,20 * * * https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, tag=京东, img-url=https://raw.githubusercontent.com/znz1992/Gallery/master/jd.png, enabled=true
+# > 京东水果
+5 6-18/6 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_fruit.js, tag=东东农场, img-url=https://raw.githubusercontent.com/znz1992/Gallery/master/jdsg.png, enabled=true
+# > 京豆宠汪汪
+5 */1 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_joy.js, tag=京东宠汪汪, img-url=https://raw.githubusercontent.com/znz1992/Gallery/master/jdww.png, enabled=true
+# > 京东萌宠
+5 6-18/6 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_pet.js, tag=东东萌宠, img-url=https://raw.githubusercontent.com/znz1992/Gallery/master/jdmc.png, enabled=true
+# > 京东种豆
+5 7-21/2 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_plantBean.js, tag=种豆得豆, img-url=https://raw.githubusercontent.com/znz1992/Gallery/master/jdzd.png, enabled=true
+# > 京东取消关注商品和店铺
+5 23 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_unsubscribe.js, tag=取关店铺商品, enabled=true
+# > 京小超
+11 1-23/5 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_superMarket.js, tag=京小超, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxc.png, enabled=true
+# > 京喜APP签到
+1 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jingxi.js, tag=京喜, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jingxi.png, enabled=true
+# > 京东进店领豆
+6 0 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_shop.js, tag=进店领豆, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_shop.png, enabled=true
+
+[rewrite_local]
+
+[server_local]
+shadowsocks=music.desperadoj.com:30003, method=aes-128-gcm, password=desperadoj.com_free_proxy_vrfn, fast-open=false, udp-relay=false, tag=网易云音乐
+
+[dns]
+;no-system
+server=223.5.5.5
+server=223.6.6.6
+server=119.29.29.29
+server=8.8.4.4
+server=/*testflight.apple.com/8.8.4.4
+;onedns
+server=117.50.11.11
+server=52.80.66.66
+
+[policy]
+#网易云音乐解锁策略
+static=网易云音乐, 网易云音乐, img-url=Netease_Music_Unlock.png
+static=Youtube, proxy, img-url=https://raw.githubusercontent.com/ddgksf2013/QuantumultX/master/Icon/YouTube.png
+static=Bahamut, proxy, img-url=https://raw.githubusercontent.com/ddgksf2013/QuantumultX/master/Icon/Bahamut.png
+
+[server_remote]
+
+
+[filter_remote]
+https://raw.githubusercontent.com/demo2099/QTXScripts/master/filter/NeteaseMusic.list, tag=🎸解锁网易云音乐, force-policy=网易云音乐, update-interval=86400, opt-parser=false, enabled=true
+
+[filter_local]
+
+[mitm]
+#~~~~~~~~~~~~~~~~~~~~~
+
+
 
